@@ -9,6 +9,7 @@ export(configureBook)
 export(createMakefile)
 export(deployCustomCSS)
 export(extractCached)
+export(extractFromPackage)
 export(link)
 export(openingDetails)
 export(prettySessionInfo)
@@ -31,6 +32,7 @@ importFrom(methods,is)
 importFrom(methods,slot)
 importFrom(rmarkdown,render)
 importFrom(utils,capture.output)
+importFrom(utils,packageVersion)
 importFrom(utils,read.csv)
 importFrom(utils,sessionInfo)
 importFrom(utils,write.csv)
